--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -50,20 +50,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "regionOfInterest = dict([('id', 'regionOfInterest'),\n",
     "                         ('value', 'POLYGON ((-8.864205 38.88616500000001, -8.864205 38.986165, -8.964205000000002 38.986165, -8.964205000000002 38.88616500000001, -8.864205 38.88616500000001))'),\n",
     "                         ('title', 'WKT Polygon for the Region of Interest'),\n",
-    "                         ('abstract', 'Set the value of WKT Polygon')])\n",
-    "\n",
+    "                         ('abstract', 'Set the value of WKT Polygon')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nameOfRegion = dict([('id', 'nameOfRegion'),\n",
     "                     ('value', 'P001'),\n",
     "                     ('title', 'Name of Region'),\n",
     "                     ('abstract', 'Name of the region of interest'),\n",
     "                     ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggIndex = dict([('id', 'aggIndex'),\n",
+    "                   ('value', 'better-ext-02-03-02'),\n",
+    "                   ('title', 'NDVI growing season statistics catalog index'),\n",
+    "                   ('abstract', 'index to access ndvi catalog'),\n",
+    "                   ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " aggApikey = dict([('id', 'aggApikey'),\n",
+    "                    ('value', 'AKCp5dKscBjS2xuYhwSmqgvk2GGQ1rpxgLH2NqT9sD915j16AXj8Vy1S8Jwr5cFPX3EvHQxAT'),\n",
+    "                    ('title', 'NDVI growing season statistics catalog apikey'),\n",
+    "                    ('abstract', 'apikey to access ndvi catalog'),\n",
+    "                    ('minOccurs', '1')])"
    ]
   },
   {
@@ -84,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +125,9 @@
    "source": [
     "# 2015, 2015\n",
     "#difNdvi\n",
-    "input_identifiers = ('LE07_difNdvi_P001_2015005_2015020.tif', 'LE07_difNdvi_P001_2015005_2015020.tif')"
+    "#input_identifiers = ('LE07_difNdvi_P001_2015005_2015020.tif', 'LE07_difNdvi_P001_2016005_2016020.tif', 'LE07_difNdvi_P001_2017005_2017020.tif')\n",
+    "\n",
+    "input_identifiers = ['A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n"
    ]
   },
   {
@@ -106,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -115,7 +150,9 @@
    },
    "outputs": [],
    "source": [
-    "input_references = tuple(['https://catalog.terradue.com/modis/search?format=atom&uid={0}'.format(pid) for pid in input_identifiers])"
+    "#input_references = tuple(['https://catalog.terradue.com/modis/search?format=atom&uid={0}'.format(pid) for pid in input_identifiers])\n",
+    "\n",
+    "input_references = ['https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n"
    ]
   },
   {
@@ -133,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +228,13 @@
     "\n",
     "import datetime\n",
     "\n",
-    "import pdb"
+    "import pdb\n",
+    "\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "import cioppy\n",
+    "ciop = cioppy.Cioppy()"
    ]
   },
   {
@@ -203,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +277,24 @@
     "        except Exception as e:\n",
     "            print(e)\n",
     "            \n",
+    "def get_input_metadata (input_refs):\n",
+    "    \n",
+    "    # for each product get metadata\n",
+    "    Result_Prod = []\n",
+    "    \n",
+    "    for index,product_ref in enumerate(input_refs):\n",
+    "        \n",
+    "        # since the search is by identifier \n",
+    "        Result_Prod.append(ciop.search(end_point = product_ref,params =[],output_fields='self,identifier,startdate,enclosure,startdate,enddate,wkt,title',creds='{}:{}'.format(aggIndex['value'],aggApikey['value']))[0] )\n",
+    "    \n",
+    "\n",
+    "    input_metadata = gpd.GeoDataFrame.from_dict(Result_Prod)\n",
+    "\n",
+    "    input_metadata['startdate'] = pd.to_datetime(input_metadata['startdate'])\n",
+    "    input_metadata['enddate'] = pd.to_datetime(input_metadata['enddate'])\n",
+    "    \n",
+    "    return input_metadata\n",
+    "\n",
     "    \n",
     "def get_metadata(filepath):\n",
     "    ds = gdal.Open(filepath)\n",
@@ -380,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,49 +468,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute Long Term Averages"
+    "##### Load metadata from catalog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aggregations converted to matrices\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#N = nv\n",
+    "message = 'Loading metadata from catalog' \n",
+    "ciop.log('INFO', message)\n",
     "\n",
-    "file_list = [os.path.join(data_path, in_id.split('/')[-1]) for in_id in input_identifiers]\n",
+    "input_metadata = get_input_metadata (input_references)\n",
     "\n",
-    "#file_list\n",
-    "\n",
-    "lta, projection, geotransform, no_data_value, data_type = calc_lta(file_list)\n",
-    "\n",
-    "\n"
+    "# order by startdate\n",
+    "input_metadata = input_metadata.sort_values(by='startdate')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Compute Long Term Averages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#file_list = [os.path.join(data_path, in_id.split('/')[-1]) for in_id in input_identifiers]\n",
+    "file_list = [os.path.join(data_path, os.path.basename(enclosure).split('?')[0]) for enclosure in input_metadata['enclosure']]\n",
+    "\n",
+    "lta, projection, geotransform, no_data_value, data_type = calc_lta(file_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# CHECK\n",
     "if check_results:\n",
@@ -464,17 +524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/workspace/dev/ewf-ext-02-03-02/src/main/app-resources/notebook/libexec/LE07_difNdvi_P001_2015005_2015020.tif', '/workspace/dev/ewf-ext-02-03-02/src/main/app-resources/notebook/libexec/LE07_difNdvi_P001_2015005_2015020.tif']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(file_list)\n",
     "\n",
@@ -490,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
