remove default value

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "aggApikey = dict([('id', 'aggApikey'),\n",
-    "                  ('value', 'AKCp5dKscBjS2xuYhwSmqgvk2GGQ1rpxgLH2NqT9sD915j16AXj8Vy1S8Jwr5cFPX3EvHQxAT'),\n",
+    "                  ('value', ''),\n",
     "                  ('title', 'NDVI growing season statistics catalog apikey'),\n",
     "                  ('abstract', 'apikey to access ndvi catalog'),\n",
     "                  ('minOccurs', '1')])"
