support circular mean for season dates

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -127,7 +127,9 @@
     "#difNdvi\n",
     "#input_identifiers = ('LE07_difNdvi_P001_2015005_2015020.tif', 'LE07_difNdvi_P001_2016005_2016020.tif', 'LE07_difNdvi_P001_2017005_2017020.tif')\n",
     "\n",
-    "input_identifiers = ['A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n"
+    "#input_identifiers = ['A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n",
+    "\n",
+    "input_identifiers = ['2A31BAABB14E151230697AD226D3DACB73C46B55', '94096912DA71E1FE48D825F9660C08FA71D72CEC', 'D27DA2CB5E74A38B60DB44524E53404ABD2BF2CC']"
    ]
   },
   {
@@ -152,7 +154,9 @@
    "source": [
     "#input_references = tuple(['https://catalog.terradue.com/modis/search?format=atom&uid={0}'.format(pid) for pid in input_identifiers])\n",
     "\n",
-    "input_references = ['https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n"
+    "#input_references = ['https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=A9A9B699C940F7BA2E06C5B76757A7294EF2E133', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=B42DB3B71A12441EEC08E3FBBE34122FFBFCECD2', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=F6B74E8ABE6A8E3464E00BC6332ABEF26931BBBF']\n",
+    "\n",
+    "input_references = ['https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=2A31BAABB14E151230697AD226D3DACB73C46B55', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=94096912DA71E1FE48D825F9660C08FA71D72CEC', 'https://catalog.terradue.com/better-ext-02-03-02/search?format=atom&uid=D27DA2CB5E74A38B60DB44524E53404ABD2BF2CC']\n"
    ]
   },
   {
@@ -250,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_results = True"
+    "check_results = False"
    ]
   },
   {
@@ -363,6 +367,33 @@
     "    return np.divide(result, (n_years*1.00), out=np.zeros(result.shape) - 9999.0, where=result > -9998)\n",
     "\n",
     "\n",
+    "#\n",
+    "# calcs avg of matrix_list\n",
+    "# it takes into account pixels with no_data_values in the time series \n",
+    "# it has option for circular mean\n",
+    "#\n",
+    "def calc_average_circular_mean (snow_matrix_list, no_data_value, apply_circular_mean = False):\n",
+    "\n",
+    "    mean_mat = np.ones(snow_matrix_list[0].shape) * no_data_value\n",
+    "\n",
+    "    for i in range(snow_matrix_list[0].shape[0]):\n",
+    "        for j in range(snow_matrix_list[0].shape[1]):       \n",
+    "            vals = []\n",
+    "            for k in range(len(snow_matrix_list)):\n",
+    "                v = snow_matrix_list[k][i,j]\n",
+    "                if (v != no_data_value):\n",
+    "                    vals.append(v)\n",
+    "        \n",
+    "            if len(vals) > 0:\n",
+    "                #print(np.mean(vals))\n",
+    "            \n",
+    "                if (apply_circular_mean):\n",
+    "                    mean_mat[i,j] = stats.circmean(vals, high=365, low=1)\n",
+    "                else:\n",
+    "                    mean_mat[i,j] = np.mean(vals)\n",
+    "                    \n",
+    "    return mean_mat\n",
+    "\n",
     "\n",
     "def get_matrix_list(image_list):\n",
     "    mat_list = []\n",
@@ -375,14 +406,21 @@
     "\n",
     "\n",
     "\n",
-    "def calc_lta(file_list):\n",
+    "def calc_lta(file_list, apply_circular_mean = False):\n",
     "    \n",
     "    if file_list:\n",
     "        \n",
     "        n_years = len(file_list)\n",
     "        agr_period_matrix = get_matrix_list(file_list)\n",
     "        print('Aggregations converted to matrices')\n",
-    "        lta = calc_average(agr_period_matrix, n_years)\n",
+    "        \n",
+    "        \n",
+    "        if apply_circular_mean:\n",
+    "            lta = calc_average_circular_mean (agr_period_matrix, -9999, apply_circular_mean)\n",
+    "        else:\n",
+    "            lta = calc_average(agr_period_matrix, n_years)\n",
+    "        \n",
+    "        \n",
     "        projection, geotransform, no_data_value, data_type = get_metadata(file_list[0])\n",
     "        \n",
     "        #for file_ in file_list:\n",
@@ -502,7 +540,43 @@
     "#file_list = [os.path.join(data_path, in_id.split('/')[-1]) for in_id in input_identifiers]\n",
     "file_list = [os.path.join(data_path, os.path.basename(enclosure).split('?')[0]) for enclosure in input_metadata['enclosure']]\n",
     "\n",
-    "lta, projection, geotransform, no_data_value, data_type = calc_lta(file_list)"
+    "# first image\n",
+    "startdate = os.path.splitext(os.path.basename(file_list[0]))[0].split('_')[-2]\n",
+    "enddate = os.path.splitext(os.path.basename(file_list[0]))[0].split('_')[-1]\n",
+    "\n",
+    "startdate_firstproduct = datetime.datetime.strptime(startdate, \"%Y%j\")\n",
+    "enddate_firstproduct = datetime.datetime.strptime(enddate, \"%Y%j\")\n",
+    "\n",
+    "\n",
+    "# last image\n",
+    "startdate = os.path.splitext(os.path.basename(file_list[-1]))[0].split('_')[-2]\n",
+    "enddate = os.path.splitext(os.path.basename(file_list[-1]))[0].split('_')[-1]\n",
+    "\n",
+    "stardate_lastproduct = datetime.datetime.strptime(startdate, \"%Y%j\")\n",
+    "enddate_lastproduct = datetime.datetime.strptime(enddate, \"%Y%j\")\n",
+    "\n",
+    "# chech if it is a doy\n",
+    "itsADoy = False\n",
+    "if 'SeasonNdvi' in os.path.basename(file_list[0]):\n",
+    "    itsADoy = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if startdate_firstproduct.year == enddate_firstproduct.year and stardate_lastproduct.year == enddate_lastproduct.year:\n",
+    "    \n",
+    "    lta, projection, geotransform, no_data_value, data_type = calc_lta(file_list)\n",
+    "    \n",
+    "else:\n",
+    "    if itsADoy:\n",
+    "        lta, projection, geotransform, no_data_value, data_type = calc_lta_circ(file_list, True)\n",
+    "    else:\n",
+    "        lta, projection, geotransform, no_data_value, data_type = calc_lta(file_list)"
    ]
   },
   {
@@ -546,28 +620,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "filename = os.path.splitext(os.path.basename(file_list[0]))[0].split('_')\n",
     "\n",
-    "# first image\n",
-    "startdate = os.path.splitext(os.path.basename(file_list[0]))[0].split('_')[-2]\n",
-    "enddate = os.path.splitext(os.path.basename(file_list[0]))[0].split('_')[-1]\n",
-    "\n",
-    "startdate_firstproduct = datetime.datetime.strptime(startdate, \"%Y%j\")\n",
-    "enddate_firstproduct = datetime.datetime.strptime(enddate, \"%Y%j\")\n",
-    "\n",
-    "\n",
-    "# last image\n",
-    "startdate = os.path.splitext(os.path.basename(file_list[-1]))[0].split('_')[-2]\n",
-    "enddate = os.path.splitext(os.path.basename(file_list[-1]))[0].split('_')[-1]\n",
-    "\n",
-    "stardate_lastproduct = datetime.datetime.strptime(startdate, \"%Y%j\")\n",
-    "enddate_lastproduct = datetime.datetime.strptime(enddate, \"%Y%j\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "##startdate = dt.datetime.strptime(startdate, '%Y')\n",
-    "##enddate = dt.datetime.strptime(enddate, '%Y')\n",
     "\n",
     "#LE07_difNdvi_P001_2015005_2015020.tif\n",
     "region = filename[2]\n",
@@ -607,6 +661,13 @@
     "\n",
     "os.rmdir(temp_folder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
